--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7382,7 +7382,7 @@ header {
   background: 0 0;
   border: 0;
   border-radius: 0;
-  outline: 0!important;
+  outline: 0 !important;
   font-family: 'NeueHaasDisplay-bol';
   font-size: 0.9em;
   letter-spacing: 1px;
@@ -7723,8 +7723,11 @@ header {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   .works__inner {
-    padding: 90px
- 30px;
+    padding: 90px 30px;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .works__inner .smm h2 {
     font-size: 27px;
@@ -7740,8 +7743,7 @@ header {
   #services .accordion-title h2 {
     font-size: 38px;
     letter-spacing: 3px;
-    padding-left: 34px
-  ;
+    padding-left: 34px;
     line-height: 1.1;
   }
   #services .arrow-icon-large svg {
@@ -7754,8 +7756,7 @@ header {
     font-size: 16px;
     padding-right: 0;
     letter-spacing: 2px;
-    margin-bottom: 20px
-;
+    margin-bottom: 20px;
     color: #fff;
   }
   #services .accordion-list .cont .en-btn_send {
