--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -3879,28 +3879,36 @@ header {
   .lapi-d {
     width: 100vw;
     height: 100vh;
-  }
-  .lapi-d .lapi-content {
-    width: inherit;
-    height: inherit;
     position: relative;
   }
-  .lapi-d .lapi-content video {
+  .lapi-d video {
     position: absolute;
     -o-object-fit: cover;
        object-fit: cover;
     z-index: -1;
   }
-  .lapi-d .lapi-content p {
+  .lapi-d .lapi-content {
+    z-index: 13;
     position: relative;
-    top: 50% !important;
-    -webkit-transform: translateY(-50%) !important;
-    transform: translateY(-50%) !important;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    bottom: 0;
     width: 100%;
     text-align: center;
-    font-family: 'NeueHaasDisplay-roman';
+    font-size: 2.6em;
+    overflow: hidden;
+  }
+  .lapi-d .lapi-content .wor {
+    padding-right: 5px;
+    display: inline-block;
+    letter-spacing: 2px;
+    font-family: 'NeueHaasDisplay-me';
+  }
+  .lapi-d .lapi-content p {
+    text-align: center;
     letter-spacing: 3px;
-    font-size: 3.3em;
+    font-size: 1.3em;
     font-weight: 600;
     color: #fff;
   }
