--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1528,6 +1528,8 @@
             position: absolute;
             object-fit: cover;
             z-index: -1;
+            width: 100%;
+            height: 100%;
         }
 
         .lapi-content {
