--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -3,6 +3,7 @@
     overflow: hidden;
     width: 100vw;
     height: 100vh;
+    background-color: #000;
 
     @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
         .ht-cursor {
