--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -2483,6 +2483,7 @@ header {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+  background-color: #000;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   .hero-section .ht-cursor {
@@ -7199,7 +7200,6 @@ header {
   html {
     width: 100%;
     height: 100%;
-    background-color: #EADBC9;
     font-family: 'Source Sans Pro', sans-serif;
   }
   body {
