--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7744,8 +7744,15 @@ header {
     line-height: 1.4;
   }
   .works__inner .works__hero__line {
-    font-size: 2.9em;
+    font-size: 3.2em;
     line-height: 1.1;
+    width: 100%;
+  }
+  .works__hero {
+    width: 100%;
+  }
+  .text-left h2 {
+    margin-left: 19%;
   }
   #services {
     padding: 5rem 1rem;
