--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -592,9 +592,18 @@
     }
 
     .works__hero__line {
-      font-size: 2.9em;
+      font-size: 3.2em;
       line-height: 1.1;
+      width: 100%;
     }
+  }
+
+  .works__hero {
+    width: 100%;
+  }
+
+  .text-left h2 {
+    margin-left: 19%;
   }
 
   #services {
