--- a/assets/resources/styles/less/core/_fonts.less
+++ b/assets/resources/styles/less/core/_fonts.less
@@ -6,69 +6,85 @@
     font-family: "Beatrice-Display-Light";
     src: url(/fonts/BeatriceDisplay-Light.woff);
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-bl';
     src: url('/fonts/NeueHaasDisplayBlack.woff'),
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-bl-it';
     src: url('/fonts/NeueHaasDisplayBlackItalic.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-bol';
     src: url('/fonts/NeueHaasDisplayBold.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-blo-it';
     src: url('/fonts/NeueHaasDisplayBoldItalic.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-light';
     src: url('/fonts/NeueHaasDisplayLight.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-light-it';
     src: url('/fonts/NeueHaasDisplayLightItalic.woff')
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-me';
     src: url('/fonts/NeueHaasDisplayMediu.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-me-it';
     src: url('/fonts/NeueHaasDisplayMediumItalic.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-roman';
     src: url('/fonts/NeueHaasDisplayRoman.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-roman-it';
     src: url('/fonts/NeueHaasDisplayRomanItalic.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-thin';
     src: url('/fonts/NeueHaasDisplayThin.woff'),
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-thin-it';
     src: url('/fonts/NeueHaasDisplayThinItalic.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-xthin';
     src: url('/fonts/NeueHaasDisplayXThin.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-xthin-it';
     src: url('/fonts/NeueHaasDisplayXThinItalic.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-xxthin';
     src: url('//fonts/NeueHaasDisplayXXThin.woff');
 }
+
 @font-face {
     font-family: 'NeueHaasDisplay-xxthin-it';
-    src: url('/fonts/NeueHaasDisplayXXThinItalic.woff'),format('woff');
+    src: url('/fonts/NeueHaasDisplayXXThinItalic.woff'), format('woff');
 }
 
 
@@ -85,10 +101,12 @@
     font-family: 'Freight-light-r';
     src: url('/fonts/FreightDispProLight-Regular.woff');
 }
+
 @font-face {
     font-family: 'Freight-medium-it';
     src: url('/fonts/FreightDispProMedium-Italic.woff');
 }
+
 @font-face {
     font-family: 'Freight-medium-r';
     src: url('/fonts/FreightDispProMedium-Regular.woff');
@@ -98,29 +116,80 @@
     font-family: 'Freight-semi-it';
     src: url('/fonts/FreightDispProSemibold-Italic.woff');
 }
+
 @font-face {
     font-family: 'Freight-black-it';
     src: url('/fonts/FreightDispProBlack-Italic.woff');
 }
+
 @font-face {
     font-family: 'Freight-black-r';
     src: url('/fonts/FreightDispProBlack-Regular.woff');
 }
+
 @font-face {
     font-family: 'Freight-bold-it';
     src: url('/fonts/FreightDispProBold-Italic.woff');
 }
+
 @font-face {
     font-family: 'Freight-book-r';
     src: url('/fonts/FreightDispProBook-Regular.woff');
 }
+
 @font-face {
     font-family: 'Freight-light-it';
     src: url('/fonts/FreightDispProLight-Italic.woff');
 }
+
 @font-face {
     font-family: 'Freight-Display-Pro-Semibold';
     src: url('/fonts/FreightDispProLight-Regular.woff');
 }
 
 
+// focus
+@font-face {
+    font-family: 'Qartella-Bold';
+    src: url('/fonts/Qartella-Bold.woff');
+}
+
+@font-face {
+    font-family: 'Qartella-Bold-I';
+    src: url('/fonts/Qartella-BoldItalic.woff');
+}
+
+@font-face {
+    font-family: 'Qartella-exBold';
+    src: url('/fonts/Qartella-ExtraBold.woff');
+}
+
+@font-face {
+    font-family: 'Qartella-ExtraBoldItalic';
+    src: url('/fonts/Qartella-ExtraBoldItalic.woff');
+}
+
+@font-face {
+    font-family: 'Qartella-Regular';
+    src: url('/fonts/Qartella-Regular.woff');
+}
+
+@font-face {
+    font-family: 'Qartella-Light';
+    src: url('/fonts/Qartella-Light.woff');
+}
+
+@font-face {
+    font-family: 'FocusGrotesk-ragu';
+    src: url('/fonts/FocusGrotesk-Regular.woff');
+}
+
+@font-face {
+    font-family: 'FocusGrotesk-thin';
+    src: url('/fonts/FocusGrotesk-Thin.woff');
+}
+
+@font-face {
+    font-family: 'Rogie';
+    src: url('/fonts/Rogie.woff');
+}
