--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -109,11 +109,11 @@
 .accordion-title h2 {
   font-size: 70px;
   /* font-weight: 800; */
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'rogie';
   letter-spacing: 6px;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-color: rgb(255, 255, 255);
-  -webkit-text-stroke: 1px;
+  -webkit-text-stroke: 0.4px;
   padding-left: 52px;
   stroke: rgb(255, 255, 255);
   color: #fff;
@@ -159,8 +159,8 @@
   overflow: hidden;
   -webkit-transition: 1s ease-in-out;
   transition: 1s ease-in-out;
-  font-family: 'NeueHaasDisplay-Roman';
-  font-size: 1em;
+  font-family: 'Qartella-Regular';
+  font-size: 1.2em;
   padding-right: 17%;
   letter-spacing: 2px;
 
