--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -370,9 +370,9 @@
     }
 
     .about-p {
-        padding-left: 6%;
+        padding-left: 3%;
         width: 31%;
-        font-size: 1.1em;
+        font-size: 1.3em;
         letter-spacing: 2px;
         overflow: hidden;
 
@@ -390,11 +390,12 @@
         h1 {
             margin: auto;
             position: relative;
-            font-family: 'NeueHaasDisplay-me';
-            right: -54px;
+            font-family: rogie;
+            right: 7px;
+            letter-spacing: 6px;
             line-height: 1;
             font-size: 9em;
-            text-transform: uppercase;
+            /* text-transform: uppercase; */
             // &::before {
             //     opacity: 0;
             //     position: absolute;
@@ -431,12 +432,12 @@
         h1 {
             margin: 0;
             position: relative;
-            font-family: 'NeueHaasDisplay-me';
+            font-family: 'Rogie';
             left: -12px;
             top: 0;
             line-height: 1.4;
             font-size: 9.3em;
-            text-transform: uppercase;
+            /* text-transform: uppercase; */
         }
     }
 
@@ -644,7 +645,8 @@
     font-synthesis: none;
     letter-spacing: 0.1em;
     /* text-transform: uppercase; */
-    font-family: 'NeueHaasDisplay-light';
+    // font-family: 'NeueHaasDisplay-light';
+    font-family: 'Qartella-Regular';
 }
 
 .c-hm-us_title {
@@ -656,8 +658,8 @@
 .t-d3-fluid {
     margin-top: 0px;
     margin-bottom: 0px;
-    font-family: 'NeueHaasDisplay-me';
-    font-size: 2.5vw;
+    font-family: 'Rogie';
+    font-size: 2.6vw;
     line-height: 0.9;
     letter-spacing: 0.05em;
     text-transform: capitalize;
@@ -3187,11 +3189,12 @@
 @media screen and (max-width:1920px) {
     #about2 {
         .big-h h1 {
-            font-size: 9.9em;
+            font-size: 12.92em;
         }
 
         .big-h2 h1 {
-            font-size: 10.1em;
+            left: 26px;
+            letter-spacing: 2px;
         }
 
         .about-p p {
@@ -3231,12 +3234,13 @@
 
     #about2 {
         .big-h h1 {
-            font-size: 9.4em;
+            font-size: 12.92em;
         }
 
         .big-h2 h1 {
-            font-size: 9.52em;
-            left: -4px;
+            font-size: 12.92em;
+            left: 26px;
+            letter-spacing: 2px;
         }
 
         .about-p p {
