--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1480,6 +1480,10 @@
     display: none;
 }
 
+.w-hde {
+    display: none;
+}
+
 @media screen and (max-width:767px) {
     .mobl {
         display: block;
