--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7910,10 +7910,10 @@ header {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   color: #fff;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'rogie';
   font-style: italic;
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px;
+  -webkit-text-stroke: 1px;
   width: 161px;
 }
 .portfolio img {
