--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -82,10 +82,10 @@
         transform: translate(-50%, -50%);
         color: #fff;
         // font-family: 'Bebas Neue';
-        font-family: 'NeueHaasDisplay-me';
+        font-family: 'rogie';
         font-style: italic;
         -webkit-text-fill-color: transparent;
-        -webkit-text-stroke: 2px;
+        -webkit-text-stroke: 1px;
         width: 161px;
     }
 
