--- a/assets/resources/styles/less/core/_fonts.less
+++ b/assets/resources/styles/less/core/_fonts.less
@@ -193,3 +193,28 @@
     font-family: 'Rogie';
     src: url('/fonts/Rogie.woff');
 }
+
+@font-face {
+    font-family: 'Origin-Regular';
+    src: url('/fonts/Origin-Regular.woff');
+}
+
+@font-face {
+    font-family: 'Origin-Light';
+    src: url('/fonts/Origin-Light.woff');
+}
+
+@font-face {
+    font-family: 'Origin-Bold';
+    src: url('/fonts/Origin-Bold.woff');
+}
+
+@font-face {
+    font-family: 'Origin-Heavy';
+    src: url('/fonts/Origin-Heavy.woff');
+}
+
+@font-face {
+    font-family: 'Ageo';
+    src: url('/fonts/Ageo.woff');
+}
