--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -377,7 +377,7 @@
         overflow: hidden;
 
         p {
-            font-family: 'NeueHaasDisplay-me';
+            font-family: 'Ageo';
             font-size: 1.1em;
         }
     }
@@ -390,7 +390,7 @@
         h1 {
             margin: auto;
             position: relative;
-            font-family: rogie;
+            font-family: 'Origin-Bold';
             right: 7px;
             letter-spacing: 6px;
             line-height: 1;
@@ -432,7 +432,7 @@
         h1 {
             margin: 0;
             position: relative;
-            font-family: 'Rogie';
+            font-family: 'Origin-Bold';
             left: -12px;
             top: 0;
             line-height: 1.4;
@@ -447,7 +447,7 @@
         h1 {
             margin: 0;
             position: relative;
-            font-family: 'NeueHaasDisplay-me';
+            font-family: 'Origin-Regular';
             right: -100px;
             top: 0;
             line-height: 1.1;
@@ -491,7 +491,7 @@
 
             p {
                 letter-spacing: 1px;
-                font-family: 'NeueHaasDisplay-me';
+                font-family: 'Ageo';
                 font-size: 2em;
             }
 
@@ -841,6 +841,7 @@
     line-height: 95px;
     text-transform: uppercase;
     margin-bottom: 0px;
+    font-family: 'Origin-Regular';
 }
 
 .opacity-0 {
@@ -865,6 +866,7 @@
     padding: 10% 13%;
     font-size: 2.5em;
     line-height: 1.2;
+    font-family: 'Ageo';
 
     .word {
         overflow: hidden;
@@ -892,7 +894,7 @@
 
                 h4 {
                     font-size: 1.6em;
-                    font-family: 'NeueHaasDisplay-bol';
+                    font-family: 'Origin-Bold';
                 }
             }
 
@@ -902,7 +904,7 @@
                 h3 {
                     font-size: 1.6em;
                     margin-bottom: 20px;
-                    font-family: 'NeueHaasDisplay-bol';
+                    font-family: 'Origin-Bold';
                     letter-spacing: 2px;
                     text-transform: uppercase;
                 }
@@ -931,7 +933,7 @@
             color: #fff;
             letter-spacing: 1px;
             text-transform: uppercase;
-            font-family: 'NeueHaasDisplay-bol';
+            font-family: 'Origin-Bold';
         }
     }
 
@@ -968,7 +970,7 @@
             color: #fff;
             letter-spacing: 1px;
             text-transform: uppercase;
-            font-family: 'NeueHaasDisplay-bol';
+            font-family: 'Origin-Bold';
         }
 
         p {
@@ -1234,7 +1236,6 @@
     font-weight: 600;
     font-size: 14em;
     padding: 32px 0;
-
     position: relative;
     overflow: hidden;
 }
@@ -1245,6 +1246,7 @@
     display: flex;
     flex: auto;
     flex-direction: row;
+    font-family: 'Origin-Bold';
 }
 
 
@@ -1262,7 +1264,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             text-align: left;
-            font-family: 'NeueHaasDisplay-bol';
+            font-family: 'Origin-Bold';
             overflow: hidden;
 
             span {
@@ -3317,11 +3319,11 @@
 
     #about2 {
         .big-h h1 {
-            font-size: 11.3em;
+            font-size: 8.3em;
         }
 
         .big-h2 h1 {
-            font-size: 11.3em;
+            font-size: 8.2em;
         }
 
         .about-p p {
