--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -947,6 +947,7 @@
 
         .logo-item {
             width: 21%;
+            padding: 0px 4.2%;
 
             img {
                 width: 100%;
