--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -546,6 +546,22 @@
   }
 }
 
+@media screen and (max-width:1680px) {
+  .services-s .video {
+    width: 46%;
+    /* height: 940px; */
+  }
+
+  .services-s .content-p {
+    padding-right: 0%;
+  }
+
+  .services-s .flex-con .fle h3 {
+    font-size: 4em;
+    opacity: 0;
+  }
+}
+
 @media screen and (max-width:1440px) {
   .works__hero__line {
     line-height: 0.9;
